--- a/semanticas.html
+++ b/semanticas.html
@@ -9,6 +9,7 @@
     <header> 
         <img src="logo.jpeg" alt="logo">
         <h1>Titulo de pagina </h1>
+        live server
         <nav>
             <ul>
                 <li> Opciones </li>
@@ -40,5 +41,27 @@
         Otras paginas.... 
         Si
     </footer>
+    Productividad <br> 
+    Emmet <br>
+    <ul>
+        <li> Elementos</li>
+        <li> Elementos</li>
+        <li> Elementos</li>
+        <li> Elementos</li>
+    </ul>
+    <ul>
+        <li>Multiedicion</li>
+        <li>Multiedicion</li>
+        <li>Multiedicion</li>
+        <li>Multiedicion</li>
+    </ul>
+    <main>
+        <section>
+            <article></article>
+            <article></article>
+        </section>
+    </main>
+    <section class="noticias"> </section>
+    <section id="inicio"> </section>
 </body>
 </html>
