inicio de estilos

--- a/semanticas.html
+++ b/semanticas.html
@@ -2,18 +2,37 @@
 <html lang = "es">
 <head>
     <meta charset = "UTF-8">
-    <meta name = "viewport" content = "width">
+    <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
     <title> Document </title>
+    <style> 
+     h1{ 
+        color: white;
+    }
+     header { 
+        background-color: rgb(156, 28, 236);
+     }
+     header nav ul li { 
+        /* border: 1px solid white; */
+        border-radius: 5px;
+        display: inline-block;
+     }
+     header nav ul li:hover{
+        background-color: green;
+        color: white;
+     }
+    </style>
 </head>
 <body>
     <header> 
         <img src="logo.jpeg" alt="logo">
         <h1>Titulo de pagina </h1>
-        live server
         <nav>
             <ul>
-                <li> Opciones </li>
-                <li> Opciones </li>
+                <li> Inicio </li>
+                <li> Archivos </li>
+                <li> Guardar</li>
+                <li> Nosotros</li>
+                <li> Salir para afuera</li>
             </ul>
         </nav>
     </header> 
