--- a/practica01css/index.html
+++ b/practica01css/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Práctica CSS 01</title>
+    <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
     <header> 
         <img src="img/resplandor.png" alt="fondo">
-        <img src="img/logo.png" alt="logo">
+        <img src="img/logo.png" alt="logo" id="logo">
         <nav> 
             <ul> 
                 <li> Inicio </li>
@@ -21,19 +22,19 @@
             <form action = "">
                 <input type = "text" placeholder = "Buscar aqui">
                 <input type = "submit" value = "buscar">
-            </form>
+            </form>     
         </nav>
     </header>
-    <section> 
+    <section id="seccion01"> 
         <article> 
             <img src="img/slide2.jpg" alt = "Slide">
         </article>
     </section>
-    <section>
+    <section id="seccion02">
         <article>
             <img src = "img/separador.jpg" alt = "separador"> 
             <br> 
-            Una seccion
+            <span class="unaSeccion nito">Una seccion</span> 
             <br>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, non perferendis! Provident sapiente laborum dignissimos odio! Natus rem dolor omnis eius vero, eos odit ab tempora blanditiis libero dolorem repudiandae?
             <br>
@@ -44,9 +45,9 @@
         <article>
             <img src = "img/separador.jpg" alt = "separador"> 
             <br> 
-            Otra seccion
+            <span class="otraSeccion nito"> Otra seccion</span>
             <br> 
-           Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit totam ad maiores aspernatur voluptas doloribus odit eaque consequatur officiis? Hic quas consectetur commodi quos dicta earum similique reiciendis aut porro.
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit totam ad maiores aspernatur voluptas doloribus odit eaque consequatur officiis? Hic quas consectetur commodi quos dicta earum similique reiciendis aut porro.
             <br>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur vel assumenda veritatis necessitatibus ea earum quaerat odit, suscipit numquam dicta. Libero tempore possimus reiciendis repellat provident id ipsam incidunt ipsa?
             <p></p>
@@ -55,7 +56,7 @@
         <article>
             <img src = "img/separador.jpg" alt = "separador"> 
             <br> 
-            Un video
+            <span class="otraSeccion nito"> Un video</span> 
             <br>
             <img src="img/video.jpg" alt="video">
         </article>
