--- a/practica02_css/index.html
+++ b/practica02_css/index.html
@@ -43,7 +43,7 @@
     </section>
     <section id="segundaseccion">
         <article>
-          <span class="letramediana colorrosa nito"> 12131 892282</span>  
+          <span class="letramediana colorrosa nito"> 01772 250227</span>  
         </article>
     </section>
     <section id="terceraseccion">
@@ -69,13 +69,27 @@
             <p></p>
            <span class="colorazul"> Upload your file now...</span> 
         </article>
-        <article>
+        <article id ="secc03art04">
           <span class="letramediana colorrosa"> Stay in touch </span>  
             <br>
             Join our mailing list today
-            <input type="mail" placeholder="Email aqui">
+            <input type="email" placeholder="Email goes here">
             <input type="button" value="Send">
         </article>
     </section>
+    <footer id = "footer">
+        <article id = "foo01art01">
+            <span class = "colorblanco"> 
+            Copyright © 2014 Granthams Ltd|All Rights Reserved|Credits
+            Home| Print| Copy| Finishing| Desing| Information| Contact us <br>
+            Privacy Policy| Terms and Conditions| All Prices EXCLUDE VAT <br> 
+        </span>
+        </article>
+        <article id = "foo01art02">
+            <span class = "colorblanco">
+                Other Granthams Websites:
+                Granthams | ArtDiscount | GraphicDiscount | PosterPrints </span>
+        </article>
+    </footer>
 </body>
 </html>
