--- a/practica03_css/index.html
+++ b/practica03_css/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Practica 3 - CSS</title>
-    <link> 
+    <link rel="stylesheet" href="css/estilos.css"> 
 </head>
 <body>
     <header> 
@@ -13,10 +13,10 @@
             <li>
                 <input type="search" placeholder="Search">
             </li>
-            <li>TRADE</li>
-            <li>REAL STATE</li>
-            <li>TOURISM</li>
-            <li>IT TECHNOLOGIES</li>
+            <li class="letra-blanca"> TRADE</li>
+            <li class="letra-blanca"> REAL STATE</li>
+            <li class="letra-blanca"> TOURISM</li>
+            <li class="letra-gris"> IT TECHNOLOGIES</li>
         </ul>
     </nav>
     </header>
@@ -24,94 +24,98 @@
         <article> 
             <img src="img/gu_logo.png" alt="Logo GU">
             <ul>
-                <li>HOME</li>
-                <li>ABOUT US</li>
-                <li>NEWS</li>
-                <li>PARTNERS</li>
-                <li>CONTACT</li>
+                <li class="letra-blanca tam-menu-lateral"> HOME</li>
+                <li class="letra-gris tam-menu-lateral"> ABOUT US</li>
+                <li class="letra-gris tam-menu-lateral"> NEWS</li>
+                <li class="letra-gris tam-menu-lateral"> PARTNERS</li>
+                <li class="letra-gris tam-menu-lateral"> CONTACT</li>
             </ul>
         </article>
         <article>
-            EXPORT AND IMPORT OF GOODS
+          <span class="letra-blanca tam-tarjetas"> EXPORT AND IMPORT OF GOODS</span>  
             <p> </p>
+            <span class="letra-blanca"> 
             Gug assists companies interested in export of product
-            from Georgia or in import goods on Georgia market
+            from Georgia or in import goods on Georgia market </span>
             <p> </p>
-            MORE ON TRADE
+            <span class="letra-blanca"> MORE ON TRADE</span>
         </article>
         <article>
-            INVEST IN REAL ESTATE IN GEORGIA
+            <span class="letra-gris tam-tarjetas"> INVEST IN REAL ESTATE IN GEORGIA</span>
             <p> </p>
-            GUG works with number of real estate companies and 
+             <span class="letra-gris"> GUG works with number of real estate companies and 
             property developers in order to assist individuals or 
-            companies
+            companies </span>
             <p> </p>
-            MORE ON REAL STATE
+            <span class="letra-blanca"> MORE ON REAL STATE</span>
         </article>
         <article>
-            SO MUCH TO DISCOVER
+            <span class="letra-blanca tam-tarjetas"> SO MUCH TO DISCOVER</span>
             <p> </p>
-            Our tourist company provides its clients with quality 
+            <span class="letra-blanca"> Our tourist company provides its clients with quality 
             services and highly competitive prices could be found
-            on Georgian tourism market today
+            on Georgian tourism market today </span>
             <p> </p>
-            MORE ON TOURISM
+            <span class="letra-blanca"> MORE ON TOURISM</span> 
         </article>
         <article>
-            SPREADING INNOVATIONS IN ICT SECTOR
+            <span class="letra-gris tam-tarjetas"> SPREADING INNOVATIONS IN ICT SECTOR</span>
             <p> </p>
-            Introduction of innovative ICT technologies on 
-            Georgian market and promotion or invesiments in ICT sector
+            <span class="letra-gris"> Introduction of innovative ICT technologies on 
+            Georgian market and promotion or invesiments in ICT sector </span>
             <p> </p>
-            MORE ON ICT TECHNOLOGIES
+            <span class="letra-blanca"> MORE ON ICT TECHNOLOGIES</span> 
         </article>
     </section>
     <footer>
         <article>
             <img src="img/news_rojo.png" alt="News">
             <hr>
-            Tuesday 2010
+            <span class="letra-gris"> Tuesday 2010</span> 
             <p> </p>
-            <span> Visit of Dutch Health to Georgia</span>
+            <span class="letra-blanca"> Visit of Dutch Health to Georgia</span>
             <p> </p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero quaerat odit ipsum error ullam quas exercitationem nihil dolore, aliquid repellat impedit saepe quidem nulla esse voluptatibus debitis consequuntur at assumenda!
+            <span class="letra-gris"> Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+            Vero quaerat odit ipsum error ullam quas exercitationem nihil dolore, aliquid
+             repellat impedit saepe quidem nulla esse voluptatibus debitis consequuntur at assumenda!</span>
             <p> </p>
-            <span> Read More</span>
+            <span class="letra-blanca read-more"> Read More</span>
         </article>
         <article>
             <img src="img/news_verde.png" alt="Links">
             <hr>
+            <span class="letra-gris"> 
             Getsadze & pateishvili <br>
             Ete sech <br>
             Emilio <br>
             Gamma Jack <br> 
-            Eso Tilin 
+            Eso Tilin </span>
             <p> </p>
-            <span> Read More</span>
+            <span class="letra-blanca read-more"> Read More</span>
         </article>
         <hr>
             <img src="img/news_claro.png" alt="Contact">
             <hr>
-            <span> Send a massage</span>
+            <span class="letra-blanca"> Send a massage</span>
             <p> </p>
             <Table>
                 <tbody>
                     <tr>
-                        <td>Tel:</td>
-                        <td>+955 591 197 791</td>
+                        <td class="letra-gris"> Tel:</td>
+                        <td class="letra-blanca">+955 591 197 791</td>
                     </tr>
                     <tr>
-                        <td>Fax:</td>
-                        <td>(955 32) 29 14 40</td>
+                        <td class="letra-gris">Fax:</td>
+                        <td class="letra-blanca">(955 32) 29 14 40</td>
                     </tr>
                     <tr>
-                        <td>Email:</td>
-                        <td>info@globalunigroup.ge</td>
+                        <td class="letra-gris">Email:</td>
+                        <td class="letra-azul">info@globalunigroup.ge</td>
                     </tr>
                 </tbody>
             </Table>
             <p> </p>
-            <span> Read More</span>
+            <span class="letra-blanca read-more"> Read More</span>
         </article>
     </footer>
 </body>
