--- a/practica03_css/index.html
+++ b/practica03_css/index.html
@@ -75,9 +75,9 @@
             <p> </p>
             <span class="letra-blanca"> Visit of Dutch Health to Georgia</span>
             <p> </p>
-            <span class="letra-gris"> Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-            Vero quaerat odit ipsum error ullam quas exercitationem nihil dolore, aliquid
-             repellat impedit saepe quidem nulla esse voluptatibus debitis consequuntur at assumenda!</span>
+            <span class="letra-gris"> On February 21-23 2010, delegations of Israeli group of investors and "Dutch Health" 
+                company visited Georgia, with interest to explore Health care system projects, clinics,
+                hospitals insurance companies and Diagnostic centers. Parties met wit government</span>
             <p> </p>
             <span class="letra-blanca read-more"> Read More</span>
         </article>
@@ -86,16 +86,16 @@
             <hr>
             <span class="letra-gris"> 
             Getsadze & pateishvili <br>
-            Ete sech <br>
-            Emilio <br>
-            Gamma Jack <br> 
-            Eso Tilin </span>
+            Doheny Global Group <br>
+            Unomobi inc. <br>
+            Munir Sukhtian Group <br> 
+            Global Capital Associates  </span>
             <p> </p>
             <span class="letra-blanca read-more"> Read More</span>
         </article>
+        <article>
+        <img src="img/news_claro.png" alt="Contact">
         <hr>
-            <img src="img/news_claro.png" alt="Contact">
-            <hr>
             <span class="letra-blanca"> Send a massage</span>
             <p> </p>
             <Table>
