Practica 5 - Inicio CSS

--- a/practicacss05/index.html
+++ b/practicacss05/index.html
@@ -7,10 +7,10 @@
 </head>
 <body>
     <header>
-
+        <img src="img/logo.png" alt="Logoheader">
     </header>
     <section>
-        <article>
+        <article class="secc01art01">
            <img src="img/notificaciones.png" alt="Notificaciones">
            <img src="img/mensajes.png" alt="Mensajes">
            <img src="img/ajustes.png" alt="Ajustes">
@@ -18,80 +18,78 @@
     </section>
     <section>
         <article>
-            <img src="img/logolinks.png" alt="PanelEnlace">
-            Panel with Links
+            <img src="img/panel.PNG" alt="PanelEnlace">
             <ul>
-                <li>&lt;/&gt; Example</li>
-                <li>&lt;/&gt; Example</li>
-                <li>&lt;/&gt; Example</li>
-                <li>&lt;/&gt; Example</li>
-                <li>&lt;/&gt; Example</li>
-                <li>&lt;/&gt; Example</li>
-                <li>&lt;/&gt; Example</li>
-                <li>&lt;/&gt; Example</li>
-                <li>&lt;/&gt; Example</li>
-                <li>&lt;/&gt; Example</li>
+                <li class="letrablanca">&lt;/&gt; Example</li>
+                <li class="letrablanca">&lt;/&gt; Example</li>
+                <li class="letrablanca">&lt;/&gt; Example</li>
+                <li class="letrablanca">&lt;/&gt; Example</li>
+                <li class="letrablanca">&lt;/&gt; Example</li>
+                <li class="letrablanca">&lt;/&gt; Example</li>
+                <li class="letrablanca">&lt;/&gt; Example</li>
+                <li class="letrablanca">&lt;/&gt; Example</li>
+                <li class="letrablanca">&lt;/&gt; Example</li>
+                <li class="letrablanca">&lt;/&gt; Example</li>
             </ul>
         </article>
         <article>
-            <img src="img/logoprogress.png" alt="PanelProgreso">
-            Panel with progress
-            Progress Bar
+            <img src="img/panelprogreso.png" alt="PanelProgreso">
+            <span> Progress Bar  </span>
             <img src="img/barra01.png" alt="barra01">
-            Progress Bar
+            <span> Progress Bar </span>
             <img src="img/barra02.png" alt="barra02">
-            Progress Bar
+            <span> Progress Bar </span>
             <img src="img/barra03.png" alt="barra03">
-            Progress Bar
+            <span> Progress Bar </span>
             <img src="img/barra04.png" alt="barra04">
         </article>
     </section>
     <main>
         <section>
-            Simple Cubes
+            <span> Simple Cubes</span>
             <article>
                 <img src="img/cubo1.png" alt="cubo01">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Id animi, 
+                <span class="letrablanca"> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Id animi, 
                 quo ratione ullam tempora aliquam quod dolorum vel explicabo aspernatur 
-                incidunt temporibus corporis vitae sint asperiores? Necessitatibus id iusto magnam.
+                incidunt temporibus corporis vitae sint asperiores? Necessitatibus id iusto magnam. </span>
             </article>
             <article>
                 <img src="img/cubo02.png" alt="cubo02">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias perferendis
+                <span class="letrablanca"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias perferendis
                 suscipit corporis dicta ipsum sit, quae ad distinctio alias, cum cumque, 
-                possimus dolor commodi aut nesciunt esse ducimus omnis voluptates.
+                possimus dolor commodi aut nesciunt esse ducimus omnis voluptates. </span>
             </article>
             <article>
                 <img src="img/cubo03.png" alt="cubo03">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias perferendis
+                <span class="letrablanca"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias perferendis
                 suscipit corporis dicta ipsum sit, quae ad distinctio alias, cum cumque, 
-                possimus dolor commodi aut nesciunt esse ducimus omnis voluptates.
+                possimus dolor commodi aut nesciunt esse ducimus omnis voluptates.</span>
             </article>
             <article>
                 <img src="img/cubo04.png" alt="cubo04">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias perferendis
+                <span class="letrablanca"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias perferendis
                 suscipit corporis dicta ipsum sit, quae ad distinctio alias, cum cumque, 
-                possimus dolor commodi aut nesciunt esse ducimus omnis voluptates.
+                possimus dolor commodi aut nesciunt esse ducimus omnis voluptates.</span>
             </article>
         </section>
         <section>
-            Panels
+            <span> Panels</span>
             <article>
-                84%
+                <span class="letrablanca "> 84% </span>
                 <img src="img/grafico.png" alt="grafico">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad fugiat exercitationem maxime ipsum.
                 Accusantium officia commodi, nam vero repellat, eveniet aliquid labore consequuntur
                 nostrum quidem sequi facilis tenetur ducimus ipsa.
             </article>
             <article>
-                36%
+                <span class="letrablanca"> 36% </span>
                 <img src="img/grafico.png" alt="grafico">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad fugiat exercitationem maxime ipsum.
                 Accusantium officia commodi, nam vero repellat, eveniet aliquid labore consequuntur
                 nostrum quidem sequi facilis tenetur ducimus ipsa.
             </article>
             <article>
-                22%
+                <span class="letrablanca"> 22%</span>
                 <img src="img/grafico.png" alt="grafico01">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad fugiat exercitationem maxime ipsum.
                 Accusantium officia commodi, nam vero repellat, eveniet aliquid labore consequuntur
@@ -99,25 +97,25 @@
             </article>
         </section>
         <section>
-            Users
+            <span> Users</span>
             <article>
                 <img src="img/usuario01.png" alt="Tilina">
-                user Example
+                <span class="letrablanca grande"> user Example </span>
                 <img src="img/SendMessage.png" alt="DM">
             </article>
             <article>
                 <img src="img/usuario02.png" alt="Tilin">
-                user Example
+                <span class="letrablanca grande"> user Example </span>
                 <img src="img/SendMessage.png" alt="DM">
             </article>
             <article>
                 <img src="img/usuario03.png" alt="Bellaka">
-                user Example
+                <span class="letrablanca grande"> user Example </span>
                 <img src="img/SendMessage.png" alt="DM">
             </article>
             <article>
                 <img src="img/usuario04.png" alt="Bellako">
-                user Example
+                <span class="letrablanca grande"> user Example </span>
                 <img src="img/SendMessage.png" alt="DM">
             </article>
         </section>
