--- a/practica05 CSS/index.html
+++ b/practica05 CSS/index.html
@@ -63,60 +63,60 @@
     </section>
     <main id="megaseccion">
         <section id="Cubos">
-            <span class="Titulo"> Simple Cubes</span>
-            <article>
-                <img src="img/cubo1.png" alt="cubo01">
-                <span class="letrablanca"> Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+            <span class="Titulo"> Simple Cubes</span> <br>
+            <article id="Art1">
+                <img src="img/cubo1.png" alt="cubo01"> <br>
+                <span class="letracubo"> Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
             </article>
-            <article>
-                <img src="img/cubo02.png" alt="cubo02">
-                <span class="letrablanca"> Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+            <article id="Art2">
+                <img src="img/cubo02.png" alt="cubo02"> <br>
+                <span class="letracubo"> Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
             </article>
-            <article>
-                <img src="img/cubo03.png" alt="cubo03">
-                <span class="letrablanca"> Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+            <article id="Art3">
+                <img src="img/cubo03.png" alt="cubo03"> <br>
+                <span class="letracubo"> Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
             </article>
-            <article>
-                <img src="img/cubo04.png" alt="cubo04">
-                <span class="letrablanca"> Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+            <article id="Art4">
+                <img src="img/cubo04.png" alt="cubo04"> <br>
+                <span class="letracubo"> Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
             </article>
         </section>
         <section id="Graficas">
-            <span class="Titulo"> Panels</span>
-            <article>
-                <span class="letrablanca "> 84% </span>
-                <img src="img/grafico.png" alt="grafico01">
-                <span> Lorem ipsum dolor sit amet, consectetur adispicing elit. Maecenas egestas justo vel porta placerat.</span>
+            <span class="Titulo"> Panels</span> <br>
+            <article id="Art5">
+                <article id="encabezado1"> 84% </article> 
+                <img src="img/grafico.png" alt="grafico01"> <br>
+                <span class="letraencabezado"> Lorem ipsum dolor sit amet, consectetur adispicing elit. Maecenas egestas justo vel porta placerat.</span>
             </article>
-            <article>
-                <span class="letrablanca"> 36% </span>
-                <img src="img/grafico.png" alt="grafico02">
-                <span> Lorem ipsum dolor sit amet, consectetur adispicing elit. Maecenas egestas justo vel porta placerat.</span>
+            <article id="Art6">
+                <article id="encabezado2"> 36% </article> 
+                <img src="img/grafico.png" alt="grafico02"> <br>
+                <span class="letraencabezado"> Lorem ipsum dolor sit amet, consectetur adispicing elit. Maecenas egestas justo vel porta placerat.</span>
             </article>
-            <article>
-                <span class="letrablanca"> 22%</span>
-                <img src="img/grafico.png" alt="grafico03">
-                <span> Lorem ipsum dolor sit amet, consectetur adispicing elit. Maecenas egestas justo vel porta placerat.</span>
+            <article id="Art7">
+                <article id="encabezado3"> 22%</article> 
+                <img src="img/grafico.png" alt="grafico03"> <br>
+                <span class="letraencabezado"> Lorem ipsum dolor sit amet, consectetur adispicing elit. Maecenas egestas justo vel porta placerat.</span>
             </article>
         </section>
         <section id="Usuarios">
-            <span class="Titulo"> Users</span>
-            <article>
+            <span class="Titulo"> Users</span> <br>
+            <article id="Art8">
                 <img src="img/usuario01.png" alt="Tilina">
                 <span class="letrablanca grande"> user Example </span>
                 <img src="img/SendMessage.png" alt="DM">
             </article>
-            <article>
+            <article id="Art9">
                 <img src="img/usuario02.png" alt="Tilin">
                 <span class="letrablanca grande"> user Example </span>
                 <img src="img/SendMessage.png" alt="DM">
             </article>
-            <article>
+            <article id="Art10">
                 <img src="img/usuario03.png" alt="Bellaka">
                 <span class="letrablanca grande"> user Example </span>
                 <img src="img/SendMessage.png" alt="DM">
             </article>
-            <article>
+            <article id="Art11">
                 <img src="img/usuario04.png" alt="Bellako">
                 <span class="letrablanca grande"> user Example </span>
                 <img src="img/SendMessage.png" alt="DM">
