--- a/practica05 CSS/index.html
+++ b/practica05 CSS/index.html
@@ -1,128 +1,107 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Práctica 05</title>
     <link rel="stylesheet" href="css/estilos.css">
 </head>
-
 <body>
-    <header>
-        <img src="img/logo.png" alt="Logoheader">
-    </header>
-    <nav id="menusuperior">
-        <article>
+    <article id="ArtLogo">
+        <img src="img/logo.png" id="body_Logo" alt="logo">
+    </article>
+    <section id="SecArts">
+        <article id="Art01_Barra">
             <img src="img/notificaciones.png" alt="Notificaciones">
             <img src="img/mensajes.png" alt="Mensajes">
             <img src="img/ajustes.png" alt="Ajustes">
         </article>
-    </nav>
-    <section id="PanelLateral">
-        <article id="PanelLink">
-            <img src="img/panel.PNG" alt="PanelEnlace">
-            <nav>
-                <ul>
-                    <li class="letrablanca">&lt;/&gt; Example</li>
-                    <li class="letrablanca">&lt;/&gt; Example</li>
-                    <li class="letrablanca">&lt;/&gt; Example</li>
-                    <li class="letrablanca">&lt;/&gt; Example</li>
-                    <li class="letrablanca">&lt;/&gt; Example</li>
-                    <li class="letrablanca">&lt;/&gt; Example</li>
-                    <li class="letrablanca">&lt;/&gt; Example</li>
-                    <li class="letrablanca">&lt;/&gt; Example</li>
-                    <li class="letrablanca">&lt;/&gt; Example</li>
-                    <li class="letrablanca">&lt;/&gt; Example</li>
-                </ul>
-            </nav>
+        <article id="Art02_Panels">
+            <article>
+                <img src="img/panel.PNG" alt="Panel01">
+                <span class="letraBlanca margin_PanelLinks">&lt;/&gt; Example</span> <br>
+                <span class="letraBlanca margin_PanelLinks">&lt;/&gt; Example</span> <br>
+                <span class="letraBlanca margin_PanelLinks">&lt;/&gt; Example</span> <br>
+                <span class="letraBlanca margin_PanelLinks">&lt;/&gt; Example</span> <br>
+                <span class="letraBlanca margin_PanelLinks">&lt;/&gt; Example</span> <br>
+                <span class="letraBlanca margin_PanelLinks">&lt;/&gt; Example</span> <br>
+                <span class="letraBlanca margin_PanelLinks">&lt;/&gt; Example</span> <br>
+                <span class="letraBlanca margin_PanelLinks">&lt;/&gt; Example</span> <br>
+                <span class="letraBlanca margin_PanelLinks">&lt;/&gt; Example</span> <br>
+                <span class="letraBlanca margin_PanelLinks">&lt;/&gt; Example</span> <br>
+            </article>
+            <article id="Art02_Panels_Barras">
+                <img src="img/panel.PNG" alt="Panel02">
+                <span class="letraGris margin_PanelBarras">Progress Bar</span>
+                <img src="img/barra01.png" alt="Barra01">
+                <span class="letraGris margin_PanelBarras">Progress Bar</span>
+                <img src="img/barra02.png" alt="Barra02">
+                <span class="letraGris margin_PanelBarras">Progress Bar</span>
+                <img src="img/barra03.png" alt="Barra03">
+                <span class="letraGris margin_PanelBarras">Progress Bar</span>
+                <img src="img/barra04.png" alt="Barra04">
+            </article>
         </article>
-        <article id="PanelProgress">
-            <ul>
-                <li>
-                    <img src="img/panelprogreso.png" alt="PanelProgreso">
-                </li>
-                <li>
-                    <span> Progress Bar </span>
-                    <img src="img/barra01.png" alt="barra">
-                </li>
-                <li>
-                    <span> Progress Bar </span>
-                    <img src="img/barra02.png" alt="barra">
-                </li>
-                <li>
-                    <span> Progress Bar </span>
-                    <img src="img/barra03.png" alt="barra">
-                </li>
-                <li>
-                    <span> Progress Bar </span>
-                    <img src="img/barra04.png" alt="barra">
-                </li>
-            </ul>
+        <article id="Art03_Forms">
+            <article id="Art03_Forms_Cubos">
+                <span class="letraGris">Simple Cubes</span>
+                <p></p>
+                <article id="Art03_Forms_Cubos_01">
+                    <img src="img/cubo1.png" alt="Cubo01">
+                    <span class="letraBlanca">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                    </span>
+                </article>
+                <article id="Art03_Forms_Cubos_02">
+                    <img src="img/cubo02.png" alt="Cubo02">
+                    <span class="letraBlanca">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                    </span>
+                </article>
+                <article id="Art03_Forms_Cubos_03">
+                    <img src="img/cubo03.png" alt="Cubo03">
+                    <span class="letraBlanca">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                    </span>
+                </article>
+                <article id="Art03_Forms_Cubos_04">
+                    <img src="img/cubo04.png" alt="Cubo04">
+                    <span class="letraBlanca">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                    </span>
+                </article>
+            </article>
+            <article id="Art03_Forms_Panels">
+                <span class="letraGris">Panels</span>
+                <p></p>
+                <img src="img/panels.PNG" alt="Panels">
+            </article>
+            <article id="Art03_Forms_Usuarios">
+                <span class="letraGris">Usuarios</span>
+                <p></p>
+                <article>
+                    <img src="img/usuario01.png" alt="Usuario01">
+                    <span class="letraBlanca text_Usuarios">User Example</span>
+                    <input type="submit" value="Send Message" class="letraBlanca">
+                </article>
+                <article>
+                    <img src="img/usuario02.png" alt="Usuario02">
+                    <span class="letraBlanca text_Usuarios">User Example</span>
+                    <input type="submit" value="Send Message" class="letraBlanca">
+                </article>
+                <article>
+                    <img src="img/usuario03.png" alt="Usuario03">
+                    <span class="letraBlanca text_Usuarios">User Example</span>
+                    <input type="submit" value="Send Message" class="letraBlanca">
+                </article>
+                <article>
+                    <img src="img/usuario04.png" alt="Usuario04">
+                    <span class="letraBlanca text_Usuarios">User Example</span>
+                    <input type="submit" value="Send Message" class="letraBlanca">
+                </article>
+            </article>
         </article>
     </section>
-    <main id="megaseccion">
-        <section id="Cubos">
-            <span class="Titulo"> Simple Cubes</span> <br>
-            <article id="Art1">
-                <img src="img/cubo1.png" alt="cubo01"> <br>
-                <span class="letracubo"> Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
-            </article>
-            <article id="Art2">
-                <img src="img/cubo02.png" alt="cubo02"> <br>
-                <span class="letracubo"> Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
-            </article>
-            <article id="Art3">
-                <img src="img/cubo03.png" alt="cubo03"> <br>
-                <span class="letracubo"> Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
-            </article>
-            <article id="Art4">
-                <img src="img/cubo04.png" alt="cubo04"> <br>
-                <span class="letracubo"> Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
-            </article>
-        </section>
-        <section id="Graficas">
-            <span class="Titulo"> Panels</span> <br>
-            <article id="Art5">
-                <article id="encabezado1"> 84% </article> 
-                <img src="img/grafico.png" alt="grafico01"> <br>
-                <span class="letraencabezado"> Lorem ipsum dolor sit amet, consectetur adispicing elit. Maecenas egestas justo vel porta placerat.</span>
-            </article>
-            <article id="Art6">
-                <article id="encabezado2"> 36% </article> 
-                <img src="img/grafico.png" alt="grafico02"> <br>
-                <span class="letraencabezado"> Lorem ipsum dolor sit amet, consectetur adispicing elit. Maecenas egestas justo vel porta placerat.</span>
-            </article>
-            <article id="Art7">
-                <article id="encabezado3"> 22%</article> 
-                <img src="img/grafico.png" alt="grafico03"> <br>
-                <span class="letraencabezado"> Lorem ipsum dolor sit amet, consectetur adispicing elit. Maecenas egestas justo vel porta placerat.</span>
-            </article>
-        </section>
-        <section id="Usuarios">
-            <span class="Titulo"> Users</span> <br>
-            <article id="Art8">
-                <img src="img/usuario01.png" alt="Tilina">
-                <span class="letrablanca grande"> user Example </span>
-                <img src="img/SendMessage.png" alt="DM">
-            </article>
-            <article id="Art9">
-                <img src="img/usuario02.png" alt="Tilin">
-                <span class="letrablanca grande"> user Example </span>
-                <img src="img/SendMessage.png" alt="DM">
-            </article>
-            <article id="Art10">
-                <img src="img/usuario03.png" alt="Bellaka">
-                <span class="letrablanca grande"> user Example </span>
-                <img src="img/SendMessage.png" alt="DM">
-            </article>
-            <article id="Art11">
-                <img src="img/usuario04.png" alt="Bellako">
-                <span class="letrablanca grande"> user Example </span>
-                <img src="img/SendMessage.png" alt="DM">
-            </article>
-        </section>
-    </main>
 </body>
 
 </html>
