Practica 7 - Header CSS

--- a/practica07_/index.html
+++ b/practica07_/index.html
@@ -21,9 +21,9 @@
         <main>
             <section>
                 <article>
-                    Social Media marketing for your online business <br>
-                    Automate your marketing efforts today and get more clients for your
-                    business. 7-day trial is now available to check it out.
+                    <h1> Social Media marketing for your online business</h1> 
+                    <span> Automate your marketing efforts today and get more clients for your <br>
+                    business. 7-day trial is now available to check it out. </span> <br>
                     <button> Get Started </button>
                     <button> Live Demo </button>
                 </article>
@@ -34,6 +34,7 @@
             <section>
                 <article> Powerful Tools <br>
                     We built the best tools to elevate your marketing efforts.
+                    <br>
                 </article>
                 <footer>
                 <article> 
